utils builder methods are added and code reformatted