@@ -4,6 +4,7 @@ import com.example.sahibinden.model.Motor;
 import com.example.sahibinden.model.dto.MotorRequest;
 import com.example.sahibinden.model.dto.MotorResponse;
 import com.example.sahibinden.service.MotorService;
+import com.example.sahibinden.utils.TestUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -12,7 +13,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -29,24 +29,28 @@ public class MotorControllerTest {
 
     @Test
     void getMotorById() {
-        Long motorId = 1L;
-        Motor mockMotor = new Motor();
-        when(motorService.getMotorById(motorId)).thenReturn(mockMotor);
 
-        ResponseEntity<MotorResponse> responseEntity = motorController.getMotorById(motorId);
+        Motor mockMotor = TestUtils.motorBuilder();
+        when(motorService.getMotorById(mockMotor.getId())).thenReturn(mockMotor);
+
+
+        ResponseEntity<MotorResponse> responseEntity = motorController.getMotorById(mockMotor.getId());
+
 
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         assertNotNull(responseEntity.getBody());
 
-        verify(motorService, times(1)).getMotorById(motorId);
+        verify(motorService, times(1)).getMotorById(mockMotor.getId());
     }
 
     @Test
     void getAllMotorlar() {
-        List<Motor> mockMotorlar = Arrays.asList(new Motor(), new Motor());
+        List<Motor> mockMotorlar = List.of(TestUtils.motorBuilder(), TestUtils.motorBuilder());
         when(motorService.getAllMotor()).thenReturn(mockMotorlar);
 
+
         ResponseEntity<List<MotorResponse>> responseEntity = motorController.getAllMotorlar();
+
 
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         assertNotNull(responseEntity.getBody());
@@ -58,10 +62,12 @@ public class MotorControllerTest {
     @Test
     void addMotor() {
         MotorRequest mockMotorRequest = new MotorRequest();
-        Motor mockAddedMotor = new Motor();
+        Motor mockAddedMotor = TestUtils.motorBuilder();
         when(motorService.addMotor(any(Motor.class))).thenReturn(mockAddedMotor);
 
+
         ResponseEntity<MotorResponse> responseEntity = motorController.addMotor(mockMotorRequest);
+
 
         assertEquals(HttpStatus.CREATED, responseEntity.getStatusCode());
         assertNotNull(responseEntity.getBody());
@@ -71,12 +77,12 @@ public class MotorControllerTest {
 
     @Test
     void updateMotor() {
-        Long motorId = 1L;
+
         MotorRequest mockMotorRequest = new MotorRequest();
-        Motor mockUpdatedMotor = new Motor();
+        Motor mockUpdatedMotor = TestUtils.motorBuilder();
         when(motorService.updateMotor(any(Motor.class))).thenReturn(mockUpdatedMotor);
 
-        ResponseEntity<MotorResponse> responseEntity = motorController.updateMotor(motorId, mockMotorRequest);
+        ResponseEntity<MotorResponse> responseEntity = motorController.updateMotor(mockUpdatedMotor.getId(), mockMotorRequest);
 
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         assertNotNull(responseEntity.getBody());
